Fixed alignment for multiple buttons in one div

--- a/stylesheets/site.css
+++ b/stylesheets/site.css
@@ -154,6 +154,11 @@ nav > ul > li
     border: solid 1px #00155c;
 }
 
+.buttons
+{
+    display: flex;
+}
+
 
 /* Desktop only */
 
@@ -227,7 +232,7 @@ nav > ul > li
 {
     background-color: #00155c;
     color: #fff;
-    padding: 10px;
+    padding: 15px;
     border: solid 1px #000;
     border-radius: 3px;
     text-align: center;
